# voice-flashcards

./: .gitignore  README.md  config.yaml  generate.py  pyproject.toml
.github/workflows/: ci.yml
